# logsnrcat

./: README.MD  bench_backbone_hit_that_griddy.py  bench_multires.py  bench_multires_cl.py  bench_multires_cl_p.py  bench_v_pred.py  build_pytorch3d.py  check_dataset.py  compiler_daemon.py  dataset.py  dataset_torus.py  dataset_torus_native.py  diffusion_checkerboard_fourier.py  diffusion_checkerboard_lab.py  diffusion_checkerboard_rn_rope.py  diffusion_checkerboard_v_pred.py  diffusion_checkerboard_vis.py  diffusion_lab_bench.py  diffusion_lab_bench_v2.py  diffusion_lab_bench_v3.py  diffusion_oracle_lab.py  diffusion_utils.py  dump_torus.py  dynamic_spatial_buffer_notes.py  inductor_cas_client.py  kv_cache_allocator.py  ld_tformer.py  ld_tformer_embedding_functional.py  memory_manager.py  model.py  nvllm_flex_attention.py  plot_scaling_results.py  pyproject.toml  sampler.py  viz_manifold_structure.py
.inductor_cache/as/: caspjcotfdhpocolz5z2qpbmitrfwnqoihbh6ynxxktufzrjcntl.py
.inductor_cache/cp/: ccplxnjhjewuplmsv5ffqppf5io5nkkyonc3ikibiiaeqqrljxnz.py
.inductor_cache/triton/0/23EHICVRMUER6UZJEPY2E53HJBEDOOZSHTO2PKBYNTMHPUFRF36Q/: __grp__triton_poi_fused_add_expand_mul_neg_pow_select_select_backward_squeeze_unsqueeze_51.json  triton_poi_fused_add_expand_mul_neg_pow_select_select_backward_squeeze_unsqueeze_51.cubin  triton_poi_fused_add_expand_mul_neg_pow_select_select_backward_squeeze_unsqueeze_51.json  triton_poi_fused_add_expand_mul_neg_pow_select_select_backward_squeeze_unsqueeze_51.llir  triton_poi_fused_add_expand_mul_neg_pow_select_select_backward_squeeze_unsqueeze_51.ptx  (+2 more)
.inductor_cache/xn/: cxnvqbwbqazralcnykxq5rtlkgm2qypzevm3ulhtbhnvcmfqec4i.py
experiments_scaling/bench_backbone_hit_that_griddy_run_000/: Base_Long_history.csv  Deep_Backbone_history.csv  Deep_Interface_history.csv
experiments_scaling/bench_backbone_hit_that_griddy_run_001/: Base_Long_history.csv  Deep_Backbone_history.csv  Deep_Interface_history.csv  post_hoc_summary.csv
(+977 files in other folders)
