[project]
name = "logsnrcat"
version = "0.1.0"
description = "BOTTOM TEXT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "encodec>=0.1.1",
    "ffmpeg>=1.4",
    "huggingface-hub>=0.28.1",
    "numpy>=2.2.2",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "psutil>=6.1.1",
    "pyarrow>=21.0.0",
    "scipy>=1.15.3",
    "setuptools>=75.8.0",
    "soundfile>=0.13.1",
    "tiktoken>=0.8.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "redis",
    "pyyaml",
    #logsnrcat
    "matplotlib"
]

[project.optional-dependencies]
cuda = [
    #"flash-attn==2.7.2.post1; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cublas-cu12==12.4.5.8; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cuda-nvcc-cu12==12.4.131; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cuda-nvrtc-cu12==12.4.127; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cuda-runtime-cu12==12.4.127; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cudnn-cu12==9.1.0.70; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cufft-cu12==11.2.1.3; sys_platform == 'linux' or sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post8/triton-3.1.0-cp310-cp310-win_amd64.whl; sys_platform == 'win32'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

#[tool.uv]
#no-build-isolation-package = ['flash-attn']